--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "harfbuzz-icu-freetype"]
 	path = harfbuzz-icu-freetype
 	url = https://github.com/tangrams/harfbuzz-icu-freetype.git
+[submodule "glfw"]
+	path = glfw
+	url = https://github.com/glfw/glfw
